2001-12-20  Bruno Haible  <bruno@clisp.org>

	* format-java.c: Include system.h.
	* format-lisp.c (parse_upto): Fix prototype. char promotes to int.
	* po-lex.c (mb_iseq, mb_setascii): Likewise.
	* po-hash-gen.y: alloca fix for AIX 3.
	* write-mo.c: Likewise.
	* x-lisp.c (syntax_code_of, read_char_syntax, attribute_of): Move
	prototypes, to avoid compilation errors on AIX 3.
	* x-java.l (TOKEN_TYPE): Remove trailing comma in enum.
	(PARSER_STATE): Likewise.
	* msgfilter.c: Include <sys/select.h> on AIX.

2001-12-12  Bruno Haible  <bruno@clisp.org>

	* xgettext.c: Include <limits.h>.
	(copyright_holder): New variable.
	(foreign_user): Remove variable.
	(long_options): Add --copyright-holder option.
	(main): Implement --copyright-holder option.
	(usage): Document --copyright-holder option.
	(construct_header): Use the copyright_holder variable. If it is
	empty, add a "public domain" comment.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* msggrep.c: Include <fnmatch.h>.
	(filename_list_match): New function.
	(is_message_selected): Use it instead of string_list_member.

2001-12-16  Bruno Haible  <bruno@clisp.org>

	* message.h (format_type): New enum value 'format_librep'.
	(NFORMATS): Increment.
	* message.c (format_language): Add format_librep entry.
	(format_language_pretty): Likewise.
	* format.h (formatstring_librep): New declaration.
	* format-librep.c: New file.
	* format.c (formatstring_parsers): Add formatstring_librep.
	* x-librep.h: New file.
	* x-librep.c: New file.
	* xgettext.c: Include x-librep.h.
	(main): Call x_librep_extract_all, x_librep_keyword.
	(language_to_scanner): Add librep rule.
	(extension_to_language): Add librep rule.
	* Makefile.am (noinst_HEADERS): Add x-librep.h.
	(FORMAT_SOURCE): Add format-librep.c.
	(xgettext_SOURCES): Add x-librep.c.

2001-12-15  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (check_plural): Use ngettext for two messages.
	Reported by Primoz Peterlin <primoz.peterlin@biofiz.mf.uni-lj.si>.
